# compilers

./: .gitignore  CMakeLists.txt  README.md
02-parsers/: BinaryOps.h  CMakeLists.txt  driver.cpp  driver.hh  elements.h  forward_decl.h  location.hh  main.cpp  parser.cpp  parser.hh  parser.y  scanner.cpp  scanner.l
02-parsers/base_elements/: BaseElement.h
02-parsers/binary_operator/: BinaryOperator.cpp  BinaryOperator.h
02-parsers/declarations/: ClassDeclaration.cpp  ClassDeclaration.h  ClassDeclarationList.cpp  ClassDeclarationList.h  CommonDeclaration.h  Declaration.cpp  Declaration.h  DeclarationList.cpp  DeclarationList.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h  MethodDeclaration.cpp  MethodDeclaration.h  VariableDeclaration.cpp  VariableDeclaration.h
02-parsers/expressions/: ArrayElementExpression.cpp  ArrayElementExpression.h  ArrayExpression.cpp  ArrayExpression.h  ArrayLengthExpression.cpp  ArrayLengthExpression.h  BinaryExpression.cpp  BinaryExpression.h  BoolExpression.cpp  BoolExpression.h  Expression.h  ExpressionList.cpp  ExpressionList.h  IdentExpression.cpp  IdentExpression.h  MethodInvokationExpression.cpp  MethodInvokationExpression.h  NotExpression.cpp  NotExpression.h  NumberExpression.cpp  NumberExpression.h  ObjectExpression.cpp  ObjectExpression.h  ParenthesesExpression.cpp  ParenthesesExpression.h  ThisExpression.cpp  ThisExpression.h
02-parsers/formals/: FormalList.cpp  FormalList.h
02-parsers/function_mechanisms/: FrameEmulator.cpp  FrameEmulator.h  FrameTranslator.cpp  FrameTranslator.h  FunctionTable.cpp  FunctionTable.h
02-parsers/irtree/: CMakeLists.txt
02-parsers/lvalues/: ArrayLvalue.cpp  ArrayLvalue.h  Lvalue.h  SimpleLvalue.cpp  SimpleLvalue.h
02-parsers/main_structures/: MainClass.cpp  MainClass.h  Program.cpp  Program.h
02-parsers/method_invokation/: MethodInvokation.cpp  MethodInvokation.h
02-parsers/object_types/: BasicType.cpp  BasicType.h  ClassType.cpp  ClassType.h  MethodType.cpp  MethodType.h  ObjectType.cpp  ObjectType.h  PrimitiveType.cpp  PrimitiveType.h  UninitObject.cpp  UninitObject.h  VoidType.cpp  VoidType.h
02-parsers/objects/: Array.cpp  Array.h  BasicObject.cpp  BasicObject.h  BasicType.cpp  BasicType.h  ClassType.cpp  ClassType.h  MethodType.cpp  MethodType.h  Object.cpp  Object.h  ObjectType.cpp  ObjectType.h  PrimitiveType.cpp  PrimitiveType.h  UninitObject.cpp  UninitObject.h
02-parsers/statements/: AssertStatement.cpp  AssertStatement.h  DefinitionStatement.cpp  DefinitionStatement.h  IfElseStatement.cpp  IfElseStatement.h  IfStatement.cpp  IfStatement.h  LocalVariableDeclarationStatement.cpp  LocalVariableDeclarationStatement.h  MethodInvokationStatement.cpp  MethodInvokationStatement.h  ReturnStatement.cpp  ReturnStatement.h  ScopeStatement.cpp  ScopeStatement.h  SoutStatement.cpp  SoutStatement.h  Statement.h  StatementList.cpp  StatementList.h  WhileStatement.cpp  WhileStatement.h
02-parsers/symbol_table/: ClassSymbolTree.cpp  ClassSymbolTree.h  ScopeLayer.cpp  ScopeLayer.h  Symbol.cpp  Symbol.h
02-parsers/types/: ArrayType.cpp  ArrayType.h  SimpleType.cpp  SimpleType.h  Type.cpp  Type.h  TypeIdentifier.cpp  TypeIdentifier.h
02-parsers/visitors/: IrtreeBuildVisitor.cpp  Visitor.h  (+10 more)
(+94 files in other folders)
